--- a/project1/home.css
+++ b/project1/home.css
@@ -1,48 +1,57 @@
-body {
-  font-family: ZCOOL XiaoWei;
+.bgcolor{
+  background-color: aliceblue;
+  font-family: sans-serif;
 }
+
+body {
+font-family: ZCOOL XiaoWei;
+}
+
 .df {
-  font-size: 85px;
-  font-style: normal;
-  font-weight: 400;
-  color: black;
-  line-height: 90px;
+font-size: 70px;
+font-style: normal;
+font-weight: 300;
+color: black;
+line-height: 85px;
 }
 
 .df1 {
-  font-size: 33px;
-  color: black;
-  line-height: 29px;
-  font-style: normal;
+font-size: 33px;
+color: black;
+line-height: 29px;
+font-style: normal;
 }
+
 .nav-link{
   font-size: 18px;
-  
 }
-.navbar .nav-item:hover .nav-link {
+
+
+.navbar-nav .nav-item:hover .nav-link {
   color: #00aeef;
 }
+
 #services {
-  background-image: url("images/img.jpg");
-  height: 500%;
-  background-size: cover;
-  font-family: ZCOOL XiaoWei;
+background-image: url("images/img.jpg");
+height: 500%;
+background-size: cover;
+font-family: ZCOOL XiaoWei;
 }
 
 #prices {
-  background: linear-gradient(0deg, rgba(50,119,255,1) 4%, rgba(83,153,158,1) 53%, rgba(211,211,228,1) 100%);
-  background-size: cover;
-  width: 100%;
-  height: 100%;
+background: linear-gradient(0deg, rgba(50,119,255,1) 4%, rgba(83,153,158,1) 53%, rgba(211,211,228,1) 100%);
+background-size: cover;
+width: 100%;
+height: 100%;
 }
 
 .opening {
-  background-image: url("images/output-onlinepngtools.png");
-  width: 100%;
-  height: 100%;
-  background-size: cover;
+background-image: url("images/output-onlinepngtools.png");
+width: 100%;
+height: 100%;
+background-size: cover;
 }
 
-a:link {
-  text-decoration: none;
+.row{
+--bs-gutter-x: 0.rem;
 }
